<resources>
    <string name="app_name">ScoutConcordia</string>
    <string name="title_activity_maps">Map</string>
    <string name="toggle_on">Loyola</string>
    <string name="toggle_off">SGW</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_map">Map</string>
    <string name="nav_shuttle">Shuttle</string>
    <string name="find_your_way_button">Find Your Way</string>
    <string name="walking">Walking</string>
    <string name="car">Car</string>
    <string name="transit">Transit</string>
    <string name="shuttle">Shuttle</string>
    <string name="search_hint">Search a classroom or building</string>
    <string name="search_starting_location_hint">Search a starting location</string>
    <string name="use_my_location">Use My Location</string>
    <string name="invalid_search_hint">No matching location found!</string>
    <string name="default_web_client_id">219414920184-vo13n4ghkndsilo4t3b8dc88oqj5i1n7.apps.googleusercontent.com</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAi_bpwITcR_xUBhFANaBaXFj7FLxxC2tA</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CourseSchedule" >Course Schedule</string>
    <string name="ShuttleBus" >Shuttle Bus Schedule</string>
    <string name="setting_title" >Settings</string>

    <string name="weekday">Monday - Thursday</string>
    <string name="FromLoyola">From Loyola</string>
    <string name="ArrivingSGW">Arriving at S.G.W"</string>
    <string name="departures">Departures:</string>
    <string name="string_halfhour">Every 30 min.</string>
    <string name="Friday">Friday</string>
    <string name="Departures">Departures</string>
    <string name="hint">Find a classroom or building</string>
    <string name="ExploreInside">Explore Inside</string>
    <string name="string_getdirections">Get Directions</string>
    <string name="summary">Setting accessibility settings to on ensures an accessible path is displayed.</string>
    <string name="string_nextstep">Next Step</string>
    <string name="AccessibilitySettings">Accessibility Settings</string>


    <string-array name="language_options">
        <item>French</item>
        <item>English</item>
    </string-array>

    <string-array name="language_values">
        <item>French</item>
        <item>English</item>
    </string-array>
</resources>
