...
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/travel_modes_nav_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:itemIconTint="@color/travel_mode_bar_button_selector"
            app:itemTextAppearanceActive="@style/TravelModesBarStyle"
            app:itemTextAppearanceInactive="@style/TravelModesBarStyle"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/getDirectionsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:src="@drawable/ic_directions_black_24dp"
            android:tint="@color/white"
            android:layout_centerInParent="true"
...
