...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:id="@+id/fragment_container"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar_activity_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_container"
        android:background="@color/burgandy"
        app:itemIconTint="@color/nav_button_color_selector"
        app:itemTextAppearanceActive="@style/BottomNavigationViewStyle"
...
