...
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar_activity_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:background="@color/burgandy"
        app:itemTextColor="@color/nav_button_color_selector"
...
